adicionando a finalização do exercicio

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="./query.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlexBlog</title>
 </head>
@@ -56,82 +57,79 @@
             </div>
         </section>
         <section class="precos">
-            <div class="preco-item">
-                <h2 class="preco-h2">Cobre</h2>
-                <span><sup>R$</sup>19</span>
-                <ul>
-                    <li>Planos ilimitados</li>
-                    <li>Acesso Restrito</li>
-                    <li>Contéudo Secreto</li>
-                    <li>Suporte 24h</li>
-                </ul>
-                <a href="#">Comprar</a>
-            </div>
-            <div class="preco-item">
-                <h2 class="preco-h2">Prata</h2>
-                <span><sup>R$</sup>39</span>
-                <ul>
-                    <li>Planos ilimitados</li>
-                    <li>Acesso Restrito</li>
-                    <li>Contéudo Secreto</li>
-                    <li>Suporte 24h</li>
-                </ul>
-                <a href="#">Comprar</a>
-            </div>
-            <div class="preco-item">
-                <h2 class="preco-h2">Ouro</h2>
-                <span><sup>R$</sup>79</span>
-                <ul>
-                    <li>Planos ilimitados</li>
-                    <li>Acesso Restrito</li>
-                    <li>Contéudo Secreto</li>
-                    <li>Suporte 24h</li>
-                </ul>
-                <a href="#">Comprar</a>
+            <div class="precos-items-geral">
+                <div class="preco-item">
+                    <h2 class="preco-h2">Cobre</h2>
+                    <span><sup>R$</sup>19</span>
+                    <ul class="ul-planos">
+                        <li class="li-planos">Planos ilimitados</li>
+                        <li class="li-planos">Acesso Restrito</li>
+                        <li class="li-planos">Contéudo Secreto</li>
+                        <li class="li-planos">Suporte 24h</li>
+                    </ul>
+                    <a  class="a-comprar" href="#">Comprar</a>
+                </div>
+                <div class="preco-item-1">
+                    <h2 class="preco-h2">Prata</h2>
+                    <span><sup>R$</sup>39</span>
+                    <ul class="ul-planos">
+                        <li class="li-planos">Planos ilimitados</li>
+                        <li class="li-planos">Acesso Restrito</li>
+                        <li class="li-planos">Contéudo Secreto</li>
+                        <li class="li-planos">Suporte 24h</li>
+                    </ul>
+                    <a class="a-comprar" href="#">Comprar</a>
+                </div>
+                <div class="preco-item-2">
+                    <h2 class="preco-h2">Ouro</h2>
+                    <span><sup>R$</sup>79</span>
+                    <ul class="ul-planos">
+                        <li class="li-planos">Planos ilimitados</li>
+                        <li class="li-planos">Acesso Restrito</li>
+                        <li class="li-planos">Contéudo Secreto</li>
+                        <li class="li-planos">Suporte 24h</li>
+                    </ul>
+                    <a class="a-comprar" href="#">Comprar</a>
+                </div>
             </div>
         </section>
         <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Inteligente</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Inteligente</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
-        <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Compacto</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Compacto</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
-        <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Economico</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Economico</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
-        <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Transparente</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Transparente</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
-        <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Opaco</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Opaco</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
-        <section class="qualidade">
             <div class="qualidade-item">
-                <h2>Sustentavél</h2>
-                <p>o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
+                <h2 class="qualidade-h2">Sustentavél</h2>
+                <p class="qualidade-p">o que temos que ter um mente é que a determinação clara e objetiva afeta positivamente a correta previsão</p>
             </div>
         </section>
         <section class="newsletter">
-            <div class="newsletter-info">
-                <p>assine e fique por dentro de todas as novidades</p>
-            </div>
-            <form class="newsletter-form"  action="#">
-                <input type="text" placeholder="Seu e-mail">
-                <button type="submit">Assinar</button>
-            </form>
-        </section>
+        <div class="newsletter-info">
+            <p class="newsletter-p">assine e fique por dentro de todas as novidades</p>
+        </div>
+        <form class="newsletter-form"  action="#">
+            <input type="text" placeholder="Seu e-mail">
+            <button type="submit">Assinar</button>
+        </form>
+    </section>
         <footer class="footer">
-            <p>todos os direitos reservados</p>
+            <p>FlexBlog  © todos os direitos reservados</p>
         </footer>
     </main>
 </body>
